# ratewatch

./: .gitignore  INTEGRATIONS.md  INTEROP.md  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/01-basic/: SCENARIO.md  run.sh
docs/: ARCHITECTURE.md
examples/: help.txt  version.txt
ratewatch/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
ratewatch/data/: calendar.json  sample_CPIAUCSL.json  sample_DGS10.json  sample_DGS2.json  sample_FEDFUNDS.json  sample_PCEPILFE.json  sample_T10Y2Y.json  sample_UNRATE.json  sample_treasury.xml
tests/: test_connect.py  test_deep.py  test_html_presets.py  test_smoke.py
