[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-ratewatch"
version = "0.1.1"
description = "Macro & rates CLI — Fed funds, CPI, Treasury yields, key econ-calendar dates from public sources"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["fintech", "macro", "rates", "treasury", "fred", "cpi", "cognis-digital", "cognis-neural-suite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/ratewatch"

[project.scripts]
"ratewatch-emit" = "ratewatch.connect:emit_main"
ratewatch = "ratewatch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ratewatch"]

[tool.hatch.metadata]
allow-direct-references = true
